// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildModelMessages > matches the golden snapshot (anthropic) 1`] = `
[
  {
    "content": "be brief",
    "providerOptions": {
      "anthropic": {
        "cacheControl": {
          "type": "ephemeral",
        },
      },
    },
    "role": "system",
  },
  {
    "content": [
      {
        "text": "look",
        "type": "text",
      },
      {
        "data": {
          "data": Uint8Array [
            137,
            80,
            78,
            71,
          ],
          "type": "data",
        },
        "mediaType": "image/png",
        "type": "file",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "providerOptions": {
          "anthropic": {
            "redactedData": "RED",
            "signature": "SIG",
          },
        },
        "text": "hmm",
        "type": "reasoning",
      },
      {
        "text": "a cat",
        "type": "text",
      },
      {
        "input": {
          "q": "cat",
        },
        "toolCallId": "call_1",
        "toolName": "lookup",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": {
          "type": "json",
          "value": {
            "ok": true,
          },
        },
        "toolCallId": "call_1",
        "toolName": "lookup",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "text": "yes, a cat",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "text": "and now?",
        "type": "text",
      },
    ],
    "providerOptions": {
      "anthropic": {
        "cacheControl": {
          "type": "ephemeral",
        },
      },
    },
    "role": "user",
  },
]
`;

exports[`buildModelMessages > matches the golden snapshot (chat-completions) 1`] = `
[
  {
    "content": "be brief",
    "role": "system",
  },
  {
    "content": [
      {
        "text": "look",
        "type": "text",
      },
      {
        "data": {
          "data": Uint8Array [
            137,
            80,
            78,
            71,
          ],
          "type": "data",
        },
        "mediaType": "image/png",
        "type": "file",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "text": "hmm",
        "type": "reasoning",
      },
      {
        "providerOptions": {
          "google": {
            "thoughtSignature": "TS_TEXT",
          },
        },
        "text": "a cat",
        "type": "text",
      },
      {
        "input": {
          "q": "cat",
        },
        "providerOptions": {
          "google": {
            "thoughtSignature": "TS_TOOL",
          },
        },
        "toolCallId": "call_1",
        "toolName": "lookup",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": {
          "type": "json",
          "value": {
            "ok": true,
          },
        },
        "toolCallId": "call_1",
        "toolName": "lookup",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "text": "yes, a cat",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "text": "and now?",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`buildModelMessages > matches the golden snapshot (responses) 1`] = `
[
  {
    "content": "be brief",
    "role": "system",
  },
  {
    "content": [
      {
        "text": "look",
        "type": "text",
      },
      {
        "data": {
          "data": Uint8Array [
            137,
            80,
            78,
            71,
          ],
          "type": "data",
        },
        "mediaType": "image/png",
        "type": "file",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "providerOptions": {
          "responses": {
            "itemId": "rs_1",
            "reasoningEncryptedContent": "ENC",
          },
        },
        "text": "hmm",
        "type": "reasoning",
      },
      {
        "text": "a cat",
        "type": "text",
      },
      {
        "input": {
          "q": "cat",
        },
        "toolCallId": "call_1",
        "toolName": "lookup",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": {
          "type": "json",
          "value": {
            "ok": true,
          },
        },
        "toolCallId": "call_1",
        "toolName": "lookup",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "text": "yes, a cat",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "text": "and now?",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`buildModelMessages > matches the golden snapshot (vertex-compatible) 1`] = `
[
  {
    "content": "be brief",
    "role": "system",
  },
  {
    "content": [
      {
        "text": "look",
        "type": "text",
      },
      {
        "data": {
          "data": Uint8Array [
            137,
            80,
            78,
            71,
          ],
          "type": "data",
        },
        "mediaType": "image/png",
        "type": "file",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "text": "hmm",
        "type": "reasoning",
      },
      {
        "providerOptions": {
          "google": {
            "thoughtSignature": "TS_TEXT",
          },
        },
        "text": "a cat",
        "type": "text",
      },
      {
        "input": {
          "q": "cat",
        },
        "providerOptions": {
          "google": {
            "thoughtSignature": "TS_TOOL",
          },
        },
        "toolCallId": "call_1",
        "toolName": "lookup",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": {
          "type": "json",
          "value": {
            "ok": true,
          },
        },
        "toolCallId": "call_1",
        "toolName": "lookup",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "text": "yes, a cat",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "text": "and now?",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;
